2008-05-06  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage/MassStorageSource.cs:
	Fix bug just introduced with mass storage support via .is_a_p files.

	* src/Dap/Banshee.Dap/Banshee.Dap/DapSource.cs: Get rid of silly non-DAP
	fallbacks for generic name and icons.

2008-05-06  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage/MassStorageSource.cs:
	Ignore iPods unless they have a .is_audio_player file.

	* src/Dap/Banshee.Dap.Ipod/Banshee.Dap.Ipod/IpodSource.cs: Remove
	unnecessary override and OnTracksAdded call.

2008-05-06  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Core/Banshee.Collection/TrackInfo.cs: Revert CanPlay
	to not be smart with playback errors; it's probably best if the engine
	just be allowed to try whenever a track is requested to play

	* src/Core/Banshee.Services/Banshee.MediaEngine/PlayerEngineService.cs:
	Consolidated Open and OpenPlay logic into a single method to eliminate
	duplication

	* src/Dap/Banshee.Dap.Ipod/Banshee.Dap.Ipod/IpodSource.cs: Implemented
	track remove support

2008-05-06  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage/MassStorageSource.cs:
	Style.

	* src/Dap/Banshee.Dap/Banshee.Dap/DapSource.cs: Fix bug that caused mass
	storage DAPs to be ignored.

2008-05-06  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Backends/Banshee.Hal/Banshee.HalBackend/Volume.cs: Catch exceptions
	while trying to identify a HAL device as a volume.  Should fix BGO
	#528481.

2008-05-06  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/StationSource.cs:
	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/LastfmSource.cs:
	* src/Core/Banshee.Services/Banshee.Sources/Source.cs: Make SetStatus and
	HideStatus methods public.

	* src/Dap/Banshee.Dap.Mtp/Banshee.Dap.Mtp/MtpSource.cs: Move loading of
	tracks into LoadFromDevice method.
